Changelog
=========

0.3.0
-----

* Added local configuration for the Forum content.
* The forum title added in the mail was not the real forum title.
* Added some other infos to the sent mail.
* Mail using BCC now supported.
* Added i18n support and italian complete translation.

0.2.0
-----

* Added the debug mode to print mail contents but not send anything.

0.1.0 - Unreleased
------------------

* Initial release.
