@@ -5,5 +5,6 @@
   <property name="sendto_all" type="boolean">False</property>
   <property name="sendto_values" type="lines"/>
   <property name="debug_mode" type="boolean"/>
+  <property name="notify_encode" type="string">utf-8</property>
  </object>
 </object>
