@@ -9,6 +9,9 @@ Changelog
 * Added some other infos to the sent mail.
 * Mail using BCC now supported.
 * Added i18n support and italian complete translation.
+* Fixed criticals problem with email encodings.
+* Added a local setting for changing text encoding in email sent.
+* A lot of UI enhancement.
 
 0.2.0
 -----
